--- a/configurar_o_statspack_no_oracle_database.ipynb
+++ b/configurar_o_statspack_no_oracle_database.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMOHNMQdoanuYLBd3AIDNON",
+      "authorship_tag": "ABX9TyOFULif/nNut1/E68J2hUCi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "#2.\t **negrito**Criar a Tabela de Estatísticas:** Execute o script spcreate.sql, localizado no diretório $ORACLE_HOME/rdbms/admin, para criar a tabela de estatísticas do Statspack. Este script cria a tabela STATSPACK no schema selecionado.\n",
+        "#2.\t **Criar a Tabela de Estatísticas:** Execute o script spcreate.sql, localizado no diretório $ORACLE_HOME/rdbms/admin, para criar a tabela de estatísticas do Statspack. Este script cria a tabela STATSPACK no schema selecionado.\n",
         "\n",
         "``@?/rdbms/admin/spcreate.sql``\n",
         "\n"
